--- a/templates/usuario/home2.html
+++ b/templates/usuario/home2.html
@@ -7,9 +7,6 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '/styles.css' %}">
 
-    <!-- Bootstrap -->
-    <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"-->
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 </head>
@@ -35,7 +32,7 @@
         <p>¿Querés un usuario temporal?</p>
         <a href="#">Sí</a>
       </div>
-      <button type="submit">Registrarse</button>
+      <button onclick="location.href='/'" type="submit">Registrarse</button>
     </form>
   </div>
 </body>
