--- a/proyecto/static/styles.css
+++ b/proyecto/static/styles.css
@@ -77,12 +77,21 @@ button {
     margin: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .opcion {
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
     padding: 5px;
     border-line: solid black 2px;
+
 }
 #error {
     color: red;
     font-size: 10px;
+}
+.opcion input[type="radio"]{
+    display: none;
 }
