--- a/proyecto/static/styles.css
+++ b/proyecto/static/styles.css
@@ -54,16 +54,6 @@ label {
 label, .links, button {
     margin-top: 20px;
 }
-button {
-    background: linear-gradient(to right, #1565C0, #90CAF9);
-    padding: 8px;
-    border: 0;
-    color: #FFF;
-    font-size: 15px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-}
 .links {
     display: flex;
     justify-content: space-between;
@@ -92,6 +82,37 @@ button {
     color: red;
     font-size: 10px;
 }
-.opcion input[type="radio"]{
+.opcion input {
     display: none;
+}
+.opcion label {
+    background: #EEEEEE;
+    padding: 3px 20px 3px 20px;
+    margin: 3px;
+    display: inline-block;
+    font-size: 1em;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.pregunta p {
+    font-weight: bold;
+}
+.opcion label:hover {
+    background: #FFFFAA;
+}
+input[type"radio"]:checked + label{
+    background: #EEEEEE;
+}
+
+
+input[type="submit"] {
+    background: linear-gradient(to right, #1565C0, #90CAF9);
+    padding: 8px;
+    border: 0;
+    color: #FFF;
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
 }
