Creación de template "Resultado"
se creó la template, hardcodeada ( aún no actualiza resultados).
Se arreglaron errores de diseño mínimos

--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -33,7 +33,7 @@
         <p>¿Jugás por primera vez?</p>
         <a href="/registro">Registrate</a>
       </div>
-      <button type="submit">Ingresar</button>
+      <input type="submit" value="Ingresar">
         <!--onclick="location.href='/'"-->
     </form>
 
