--- a/proyecto/static/styles.css
+++ b/proyecto/static/styles.css
@@ -11,6 +11,11 @@ body {
     height: 100vh;
     font-family: sans-serif;
 }
+h1 {
+    font-size: 36px;
+    line-height: 42px;
+    text-align:center;
+}
 .container {
     max-width: 400px;
     width: 100%;
@@ -22,6 +27,7 @@ body {
 .form {
     display: flex;
     flex-direction: column;
+    margin: 10px;
 }
 .title {
     text-align: center;
@@ -58,6 +64,7 @@ label, .links, button {
     display: flex;
     justify-content: space-between;
     font-size: 14px;
+    margin: 5px;
 }
 .links a {
     color: #6E48AA
@@ -76,13 +83,14 @@ label, .links, button {
     margin: 0;
     padding: 5px;
     border-line: solid black 2px;
+    width: 100%;
 }
 #error {
     color: red;
     font-size: 10px;
 }
 .opcion input {
-    "display: none;"
+    display: none;
 }
 .opcion label {
     background: #EEEEEE;
@@ -92,6 +100,8 @@ label, .links, button {
     font-size: 1em;
     border-radius: 3px;
     cursor: pointer;
+    text-align: center
+    width: 100%;
 }
 .pregunta p {
     font-weight: bold;
@@ -99,8 +109,8 @@ label, .links, button {
 .opcion label:hover {
     background: #FFFFAA;
 }
-input[type"radio"]:checked + label{
-    background: #EEEEEE;
+.opcion input:checked+label{
+    background: #FFFFAA;
 }
 input[type="submit"] {
     background: linear-gradient(to right, #1565C0, #90CAF9);
@@ -112,4 +122,17 @@ input[type="submit"] {
     text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
+    width: 100%;
+}
+.container table{
+    width: 100%;
+    border-collapse: collapse;
+    margin: 30px 0;
+}
+.container table td {
+    border: 1px solid #ccc;
+    padding: 8px 15px;
+    width: 50%;
+    font-weight: 500;
+    font-size: 18px;
 }
