--- a/templates/usuario/results.html
+++ b/templates/usuario/results.html
@@ -10,10 +10,12 @@
   <div class="container">
     <h1> Resultados </h1>
     <table>
-      <tr>
-          <td>Usuario</td>
-          <td><span>franco</span></td>
-      </tr>
+            {% for key, value in results %}
+              <tr>
+                  <td>{{ field }}</td>
+                  <td><span>{{ value }}</span></td>
+              </tr>
+            {% endfor %}
         <tr>
           <td>Puntaje</td>
           <td><span>50</span></td>
@@ -26,6 +28,7 @@
           <td>Respuestas correctas</td>
           <td><span>20</span></td>
       </tr>
+
     </table>
       <input type="submit" onclick="location.href='/'" value="Volver al Inicio">
   </div>
