Revert "Zona horaria"
This reverts commit 0246e153effaaa3e506e3f165f223431dc5a3525.

--- a/templates/usuario/results.html
+++ b/templates/usuario/results.html
@@ -10,12 +10,10 @@
   <div class="container">
     <h1> Resultados </h1>
     <table>
-            {% for key, value in results %}
-              <tr>
-                  <td>{{ field }}</td>
-                  <td><span>{{ value }}</span></td>
-              </tr>
-            {% endfor %}
+      <tr>
+          <td>Usuario</td>
+          <td><span>franco</span></td>
+      </tr>
         <tr>
           <td>Puntaje</td>
           <td><span>50</span></td>
@@ -28,7 +26,6 @@
           <td>Respuestas correctas</td>
           <td><span>20</span></td>
       </tr>
-
     </table>
       <input type="submit" onclick="location.href='/'" value="Volver al Inicio">
   </div>
