--- a/proyecto/static/styles.css
+++ b/proyecto/static/styles.css
@@ -83,7 +83,7 @@ label, .links, button {
     margin: 0;
     padding: 5px;
     border-line: solid black 2px;
-    text-align: center;
+    width: 100%;
 }
 #error {
     color: red;
@@ -101,6 +101,7 @@ label, .links, button {
     border-radius: 3px;
     cursor: pointer;
     text-align: center
+    width: 100%;
 }
 .pregunta p {
     font-weight: bold;
