--- a/templates/usuario/results.html
+++ b/templates/usuario/results.html
@@ -12,19 +12,19 @@
     <table>
       <tr>
           <td>Usuario</td>
-          <td><span>franco</span></td>
+          <td><span>admin02</span></td>
       </tr>
         <tr>
           <td>Puntaje</td>
-          <td><span>50</span></td>
+          <td><span>100%</span></td>
       </tr>
         <tr>
           <td>Total de Preguntas</td>
-          <td><span>40</span></td>
+          <td><span>2</span></td>
       </tr>
         <tr>
           <td>Respuestas correctas</td>
-          <td><span>20</span></td>
+          <td><span>2</span></td>
       </tr>
     </table>
       <input type="submit" onclick="location.href='/'" value="Volver al Inicio">
