Prueva de vista results
no me mostraba la vista results.

--- a/templates/proyecto/listar_preguntas.html
+++ b/templates/proyecto/listar_preguntas.html
@@ -27,7 +27,7 @@
                     {% endwith %}
                 </div>
             {% endfor %}
-            <input type="submit" value="Enviar Respuestas">
+            <input type="submit" value="Enviar Respuestas" onclick="location.href='/results'">
             </form>
         </div>
 	</body>
