--- a/templates/usuario/results.html
+++ b/templates/usuario/results.html
@@ -12,7 +12,7 @@
     <table>
       <tr>
           <td>Usuario</td>
-          <td><span>admin02</span></td>
+          <td><span>Informatorio</span></td>
       </tr>
         <tr>
           <td>Puntaje</td>
